--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.2",
+    "@sanity/vision": "^3.2.6",
     "classnames": "^2.3.2",
     "next": "13.1.2",
+    "next-sanity": "^4.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sanity": "^3.2.6"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
