--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-sanity": "^4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sanity": "^3.2.6"
+    "sanity": "^3.2.6",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
