--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.2",
+    "@portabletext/react": "^2.0.1",
     "@sanity/vision": "^3.2.6",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
