--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "lucas.dev-blog",
+  "name": "personal-blog-nextjs",
   "description": "Personal blog rewritten in Next.js + Tailwind CSS",
   "version": "0.1.0",
   "license": "UNLICENSED",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucasadrianof/personal-blog-nextjs.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
