--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,15 +15,33 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
+    "array-bracket-spacing": ["error", "never", {
+      "objectsInArrays": true
+    }],
+    "arrow-spacing": ["error", {
+      "after": true,
+      "before": true
+    }],
+    "block-spacing": "error",
     "import/first": "error",
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
     "import/no-relative-packages": "error",
+    "indent": ["error", 2],
+    "key-spacing": "error",
+    "keyword-spacing": "error",
+    "no-multiple-empty-lines":"error",
+    "no-multi-spaces": "error",
+    "no-extra-parens": "error",
     "no-relative-import-paths/no-relative-import-paths": [
       "error",
       { "prefix": "@", "rootDir": "src" }
     ],
+    "no-trailing-spaces":"error",
+    "no-whitespace-before-property":"error",
+    "object-curly-spacing": ["error", "always"],
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "space-in-parens": "error"
   }
 }
