--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npx prettier -c .",
-    "lint:fix": "next lint --fix && npx prettier -c --write ."
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -48,6 +48,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-eslint": "^15.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
