feat: make blog sitemap to be SSR

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ NEXT_PUBLIC_SANITY_API_VERSION="2022-11-15"
 NEXT_PUBLIC_SANITY_PROJECT_TITLE="Lucas Personal Blog"
 
 SANITY_REVALIDATE_SECRET=
+SITE_URL="https://lucasfadriano.dev"
