--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
