--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-blog-nextjs",
   "description": "Personal blog rewritten in Next.js + Tailwind CSS",
   "version": "0.1.0",
-  "license" : "BSD-3-Clause",
+  "license": "BSD-3-Clause",
   "private": true,
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "@next/font": "13.1.2",
     "@portabletext/react": "^2.0.1",
     "@sanity/vision": "^3.2.6",
+    "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "next": "13.1.2",
@@ -35,6 +36,7 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
