--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,5 @@ NEXT_PUBLIC_SANITY_API_VERSION="2022-11-15"
 NEXT_PUBLIC_SANITY_PROJECT_TITLE="Lucas Personal Blog"
 
 SANITY_REVALIDATE_SECRET=
+WEBHOOK_AUTHORIZATION_TOKEN=
 SITE_URL="https://lucasfadriano.dev"
