--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ NEXT_PUBLIC_SANITY_DATASET=
 NEXT_PUBLIC_SANITY_API_VERSION="2022-11-15"
 NEXT_PUBLIC_SANITY_PROJECT_TITLE="Lucas Personal Blog"
 
+COMMENTO_URL=
 SANITY_REVALIDATE_SECRET=
 WEBHOOK_AUTHORIZATION_TOKEN=
 SITE_URL="https://lucasfadriano.dev"
