--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   app:
     build: .
@@ -10,3 +10,28 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
+
+  commento:
+    image: caroga/commentoplusplus
+    ports:
+      - 8080:8080
+    depends_on:
+      - app
+      - db
+    environment:
+      COMMENTO_ORIGIN: http://localhost:8080
+      COMMENTO_PORT: 8080
+      COMMENTO_POSTGRES: postgres://postgres:postgres@db:5432/commento?sslmode=disable
+      COMMENTO_FORBID_NEW_OWNERS: 'true'
+      COMMENTO_GZIP_STATIC: 'true'
+
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: commento
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    expose:
+      - 5432
+    volumes:
+      - /var/lib/postgresql/data
