chore: add rule to require eol-last

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
       "before": true
     }],
     "block-spacing": "error",
+    "eol-last": "error",
     "import/first": "error",
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
