fix: copy correctly the app to the Docker image

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
+# local configuration files
 .env*.local
 .env
+docker-compose.override.yml
 
 # vercel
 .vercel
