--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,18 +10,26 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended",
     "plugin:import/typescript",
+    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
-    "array-bracket-spacing": ["error", "never", {
-      "objectsInArrays": true
-    }],
-    "arrow-spacing": ["error", {
-      "after": true,
-      "before": true
-    }],
+    "array-bracket-spacing": [
+      "error",
+      "never",
+      {
+        "objectsInArrays": true
+      }
+    ],
+    "arrow-spacing": [
+      "error",
+      {
+        "after": true,
+        "before": true
+      }
+    ],
     "block-spacing": "error",
     "eol-last": "error",
     "import/first": "error",
@@ -31,15 +39,15 @@
     "indent": ["error", 2],
     "key-spacing": "error",
     "keyword-spacing": "error",
-    "no-multiple-empty-lines":"error",
+    "no-multiple-empty-lines": "error",
     "no-multi-spaces": "error",
     "no-extra-parens": "error",
     "no-relative-import-paths/no-relative-import-paths": [
       "error",
       { "prefix": "@", "rootDir": "src" }
     ],
-    "no-trailing-spaces":"error",
-    "no-whitespace-before-property":"error",
+    "no-trailing-spaces": "error",
+    "no-whitespace-before-property": "error",
     "object-curly-spacing": ["error", "always"],
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
