--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended",
     "plugin:import/typescript",
-    "plugin:tailwindcss/recommended",
-    "prettier"
+    "plugin:prettier/recommended",
+    "plugin:tailwindcss/recommended"
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
@@ -36,7 +36,13 @@
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
     "import/no-relative-packages": "error",
-    "indent": ["error", 2],
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
     "key-spacing": "error",
     "keyword-spacing": "error",
     "no-multiple-empty-lines": "error",
