--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^5.0.4"
   }
 }
