--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "personal-blog-nextjs",
   "description": "Personal blog rewritten in Next.js + Tailwind CSS",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "BSD-3-Clause",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/lucasadrianof/personal-blog-nextjs.git"
+  },
+  "author": {
+    "email": "hi@lucasfadriano.dev",
+    "name": "Lucas Felicio Adriano"
   },
   "scripts": {
     "dev": "next dev",
@@ -40,9 +44,10 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.32.0",
+    "eslint": "^8.32.0",
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -55,6 +60,6 @@
     "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^5.0.4"
   }
 }
