--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        run: npm run lint
+        run: turbo lint
 
       - name: Run TS check
         run: npx tsc --noEmit
