--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/lucasadrianof/personal-blog-nextjs.git"
   },
   "author": {
-    "email": "hi@lucasfadriano.dev",
+    "email": "lucas@lucasfadriano.dev",
     "name": "Lucas Felicio Adriano"
   },
   "scripts": {
@@ -25,7 +25,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/font": "13.4.1",
     "@portabletext/react": "^2.0.1",
     "@sanity/vision": "^3.2.6",
     "aos": "^3.0.0-beta.6",
@@ -60,6 +59,7 @@
     "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
+    "turbo": "^1.9.4",
     "typescript": "^5.0.4"
   }
 }
