--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.2.6",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
