--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "name": "Lucas Felicio Adriano"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
@@ -30,15 +30,17 @@
     "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-sanity": "^4.1.2",
     "next-sitemap": "^3.1.52",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanity": "^3.2.6",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.5.6",
     "@types/aos": "^3.0.4",
     "@types/node": "18.16.6",
     "@types/react": "18.2.6",
@@ -47,7 +49,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
