--- a/docker-compose.override.example.yml
+++ b/docker-compose.override.example.yml
@@ -1,8 +1,7 @@
-version: "3"
+version: '3'
 services:
   app:
     volumes:
       - ./:/home/node/app
       - /home/node/app/.next/
-      - /home/node/app/.turbo/
       - /home/node/app/node_modules/
