--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: "3"
 services:
   app:
     build: .
-    command: turbo dev
-    ports: 
+    command: npm run dev
+    ports:
       - "3000:3000"
