--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "name": "Lucas Felicio Adriano"
   },
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
@@ -26,16 +26,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^2.0.1",
-    "@sanity/vision": "^3.2.6",
+    "@sanity/vision": "^3.18.1",
     "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "next": "^13.5.6",
-    "next-sanity": "^4.1.2",
-    "next-sitemap": "^3.1.52",
+    "next-sanity": "^5.5.8",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.2.6",
+    "sanity": "^3.18.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6"
   },
@@ -61,7 +61,6 @@
     "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "turbo": "^1.9.4",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   }
 }
