--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "name": "personal-blog-nextjs",
-  "description": "Personal blog rewritten in Next.js + Tailwind CSS",
   "version": "1.0.0",
-  "license": "BSD-3-Clause",
   "private": true,
+  "description": "Personal blog rewritten in Next.js + Tailwind CSS",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucasadrianof/personal-blog-nextjs.git"
   },
+  "license": "BSD-3-Clause",
   "author": {
-    "email": "lucas@lucasfadriano.dev",
-    "name": "Lucas Felicio Adriano"
+    "name": "Lucas Felicio Adriano",
+    "email": "lucas@lucasfadriano.dev"
   },
   "scripts": {
-    "dev": "next dev --turbo",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "dev": "next dev --turbo",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "start": "next start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/env": "^15.1.7",
     "@portabletext/react": "^2.0.1",
     "@sanity/vision": "^3.18.1",
     "aos": "^3.0.0-beta.6",
@@ -63,5 +64,9 @@
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.2.2"
+  },
+  "packageManager": "pnpm@9.14.2",
+  "engines": {
+    "node": ">=20"
   }
 }
