--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/env": "^15.1.7",
     "@portabletext/react": "^2.0.1",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.18.1",
     "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "next": "^13.5.6",
+    "next": "^14.2.24",
     "next-sanity": "^5.5.8",
     "next-sitemap": "^4.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^3.18.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
@@ -44,14 +45,14 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
     "@types/aos": "^3.0.4",
-    "@types/node": "18.16.6",
+    "@types/node": "20.17.19",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.2.24",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
