--- a/package.json
+++ b/package.json
@@ -43,28 +43,27 @@
     "turbo": "^1.10.16"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@next/bundle-analyzer": "^13.5.6",
+    "@next/eslint-plugin-next": "^15.1.7",
     "@types/aos": "^3.0.4",
     "@types/node": "20.17.19",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.32.0",
+    "eslint": "^9.20.1",
     "eslint-config-next": "^14.2.24",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-no-relative-import-paths": "^1.5.2",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-import-resolver-typescript": "^3.8.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "^3.10.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "neostandard": "^0.12.1",
     "postcss": "^8.4.31",
     "postcss-viewport-height-correction": "^1.1.1",
-    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
