chore: remove no longer needed eslint plugins

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/env": "^15.1.7",
     "@portabletext/react": "^2.0.1",
+    "@sanity/icons": "^3.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.18.1",
     "aos": "^3.0.0-beta.6",
@@ -53,8 +54,6 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^9.20.1",
     "eslint-config-next": "^14.2.24",
-    "eslint-import-resolver-typescript": "^3.8.2",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
