--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,13 +24,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Run linters
-        run: npx turbo lint
+        run: pnpm lint
 
       - name: Run TS check
-        run: npx tsc --noEmit
+        run: pnpm build:check
