--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "next build",
     "build:check": "tsc --noEmit",
     "postbuild": "next-sitemap",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "next start"
@@ -26,19 +26,19 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/env": "^15.1.7",
-    "@portabletext/react": "^2.0.1",
+    "@next/env": "15.1.7",
+    "@portabletext/react": "^3.2.1",
     "@sanity/icons": "^3.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.18.1",
     "aos": "^3.0.0-beta.6",
     "clsx": "^2.1.1",
     "date-fns": "^2.29.3",
-    "next": "^14.2.24",
+    "next": "15.1.7",
     "next-sanity": "^5.5.8",
     "next-sitemap": "^4.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sanity": "^3.18.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
@@ -47,15 +47,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@next/bundle-analyzer": "^13.5.6",
-    "@next/eslint-plugin-next": "^15.1.7",
+    "@next/bundle-analyzer": "15.1.7",
+    "@next/eslint-plugin-next": "15.1.7",
     "@types/aos": "^3.0.4",
     "@types/node": "20.17.19",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "autoprefixer": "^10.4.13",
     "eslint": "^9.20.1",
-    "eslint-config-next": "^14.2.24",
+    "eslint-config-next": "15.1.7",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
@@ -69,5 +69,11 @@
   "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=20"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.10",
+      "@types/react-dom": "19.0.4"
+    }
   }
 }
