--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
     "@sanity/icons": "^3.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.18.1",
+    "@sanity/webhook": "^4.0.4",
     "aos": "^3.0.0-beta.6",
     "clsx": "^2.1.1",
     "date-fns": "^2.29.3",
     "next": "15.1.7",
-    "next-sanity": "^5.5.8",
+    "next-sanity": "^9.8.59",
     "next-sitemap": "^4.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sanity": "^3.18.1",
+    "sanity": "^3.76.2",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "tailwind-merge": "^3.0.1",
