chore: remove manual turbo & sharp

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build:check": "tsc --noEmit",
     "postbuild": "next-sitemap",
     "dev": "next dev --turbopack",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "start": "next start"
   },
   "dependencies": {
@@ -42,9 +42,7 @@
     "react-dom": "19.0.0",
     "sanity": "^3.76.2",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.5",
-    "tailwind-merge": "^3.0.1",
-    "turbo": "^1.10.16"
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
